# WeightChecker

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-build.yml
src/: ErrorFrame.cpp  ErrorFrame.h  HelperFuncs.cpp  HelperFuncs.h  InputWeight.cpp  InputWeight.h  main.cpp  main.h
